--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-router-dom": "^5.1.2",
+    "react-router-ga": "^1.2.3",
     "react-scripts": "3.2.0",
     "react-visibility-sensor": "^5.1.1",
     "superagent": "^5.1.3"
