--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^5.2.1",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^5.0.1",
     "react-visibility-sensor": "^5.1.1",
     "sass": "^1.56.1",
     "superagent": "^5.1.3"
