--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^5.2.1",
+    "react-markdown": "^8.0.3",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
     "react-visibility-sensor": "^5.1.1",
