--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.7.0",
-    "@material-ui/icons": "^4.5.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.14",
+    "@mui/material": "^5.10.14",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^5.2.1",
-    "react-router-dom": "^5.1.2",
-    "react-router-ga": "^1.2.3",
-    "react-scripts": "3.2.0",
+    "react-markdown": "^8.0.3",
+    "react-router-dom": "^6.4.2",
+    "react-scripts": "^5.0.1",
     "react-visibility-sensor": "^5.1.1",
+    "sass": "^1.56.1",
     "superagent": "^5.1.3"
   },
   "scripts": {
@@ -38,6 +40,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {}
+  }
 }
