--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "react-helmet": "^5.2.1",
     "react-markdown": "^8.0.3",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "^5.0.1",
     "react-visibility-sensor": "^5.1.1",
     "sass": "^1.56.1",
     "superagent": "^5.1.3"
@@ -40,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   }
 }
